# ProgramInCourse

./: README.md
Artificial Intelligence/homework/: 作业1-人工智能是不是双刃剑.pptx  作业3.docx  作业4.docx
Artificial Intelligence/lab/: ~$智能——报告模板 - 副本 (2).docx  人工智能__实验指导书.docx  人工智能——报告模板.docx
Computer Networks/homework/: 计算机网络左右3-作答-附件.xlsx  计算机网络左右3-作答.docx
Computer Networks/lab/: 120L022109_李世轩_实验x.docx
Computer Systems/assignment/: HIT-ICS2022大作业报告模板.doc  hello  hello.s
Computer Systems/homework/: 120L022109-李世轩-第一次作业.docx
Database Systems/lab/: 关系数据库应用系统开发实践指导书.docx
Digital media technology/: 阅读报告.docx
Digital media technology/assignment/code/compress/: CMakeLists.txt  compress.cpp  compress.hpp
Digital media technology/assignment/code/compress/libjpeg-turbo/lib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
Digital media technology/assignment/code/green/: CMakeLists.txt
Digital media technology/assignment/code/green/libjpeg-turbo/include/: jpeglib.h
Digital media technology/assignment/code/green/libjpeg-turbo/lib/: jpeg-static.lib  jpeg.lib
Digital media technology/assignment/code/green/src/: green.cpp  green.hpp
Digital media technology/lab/: 学号-姓名-xx实验-数字媒体技术实验报告模板(仅供参考).docx
High-level Language Programming/assignment/: 俄罗斯方块.cbp  计算机大类——高级语言程序设计实验大作业反思报告.doc
Interactive Design & Development for Digital Media/assignment/: Technical Report.docx
Interactive Design & Development for Digital Media/lab/: Lab 1 - C#-classArray.docx  Lab 2 - Unity - interface.docx  Lab 3 - Unity - C# scripting.docx  (+10 more)
Operating Systems/: OS2023李世轩-120L022109-作业.docx
(+2369 files in other folders)
